--- a/src/main/resources/templates/AnimalForm.hbs
+++ b/src/main/resources/templates/AnimalForm.hbs
@@ -4,7 +4,7 @@
 <div class="col-md-6">
     <form>
         <div class="form-group">
-            <label for="name">name:</label>
+            <label for="name">Name:</label>
             <input type="text" name="name" class="form-control">
         </div>
         <div class="checkbox">
